# hydrakv-python

./: README.md  benchmark.py  pyproject.toml  requirements.txt
src/hydrakv/: __init__.py  client.py
src/hydrakv/models/: http_models.py  hydrakv.proto  hydrakv_pb2.py  hydrakv_pb2_grpc.py
