[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrakv"
version = "0.1.0"
authors = [
  { name="Oliver Sharif", email="oliver.sharif@example.com" },
]
description = "A Python client for HydraKV"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx",
    "loguru",
    "grpcio",
    "grpcio-tools",
    "pydantic",
]

[project.urls]
"Homepage" = "https://github.com/oliver-sharif/hydrakv-python"
"Bug Tracker" = "https://github.com/oliver-sharif/hydrakv-python/issues"

[tool.setuptools.packages.find]
where = ["src"]
